--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,7 @@
     "angular-animate": "^1.5.0",
     "angular-bootstrap": "^1.2.4",
     "angular": "^1.5.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-route": "^1.5.0"
   }
 }
