--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "angular-bootstrap": "^1.2.4",
     "angular": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "angular-bootstrap-toggle-switch": "^0.5.6"
   }
 }
