--- a/public/bower.json
+++ b/public/bower.json
@@ -22,5 +22,8 @@
     "bootstrap": "^3.3.6",
     "angular-route": "^1.5.0",
     "angular-bootstrap-toggle-switch": "^0.5.6"
+  },
+  "resolutions": {
+    "angular": "^1.5.0"
   }
 }
