--- a/public/bower.json
+++ b/public/bower.json
@@ -21,7 +21,8 @@
     "angular": "^1.5.0",
     "bootstrap": "^3.3.6",
     "angular-route": "^1.5.0",
-    "angular-bootstrap-toggle-switch": "^0.5.6"
+    "angular-bootstrap-toggle-switch": "^0.5.6",
+    "angular-number-picker": "^1.2.6"
   },
   "resolutions": {
     "angular": "^1.5.0"
